[package]
name = "jyt"
version = "0.1.0"
edition = "2021"
authors = ["NoahELE"]
description = "a command line tool to quickly convert between json, yaml and toml"

[dependencies]
clap = { version = "4.0.4", features = ["derive"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
serde_yaml = "0.9.11"
toml = "0.7.0"
anyhow = "1.0.58"
thiserror = "1.0.31"
