[package]
name = "jyt"
version = "0.1.0"
edition = "2021"
authors = ["NoahELE"]
description = "a command line tool to quickly convert between json, yaml and toml"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
